@startuml
package "Billing Context" {

entity Payment {
PaymentId id
OrderId id
Monet total
PaymentState state
void collect()
}

enum PaymentState {
_Requested
_Collected
_Cancelled
}

}

package "Sales Context" {

entity Cart {
CartId id
boolean isEmpty()
void add()
void remove()
}
entity CartItem {
CartItemId id
ProductId productId
Title title
Quantity quantity
}
Cart *-- CartItem

entity Order {
OrderId id
OrderTimte time
Money total()
}
class OrderItem {
ProductId productId
Money money
Quantity quantity
}
Order *-- OrderItem

entity Product {
ProductId id
Title title
Description description
Money price
Quantity quantity
void changeTitle()
void changeDescription()
void changeQuantity()
void changePrice()
}

enum ProductState {
Available
OutOfStock
Deleted
}

}

package "Delivery Context" {

entity Delivery{
DeliveryId id
OrderId orderId
Address address
void dispatch()
}

}
@enduml